# fused-effects

./: .ghci.repl  .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  404.html  CODE_OF_CONDUCT.md  ChangeLog.md  Dockerfile  LICENSE  README.hs  README.md  Setup.hs  book.toml  build.sh  cabal.project  cabal.project.ci  common_errors.html  defining_effects.html  faqs.html  fused-effects.cabal  hie.yaml  higher-order-effects.cabal  index.html  overview.html  print.html  reinterpreting_effects.html  related.html  releasing.html  searchindex.js  searchindex.json  toc.html  toc.js  usage.html
.github/: main.workflow
.github/workflows/: book.yml  build.yml  ci.yml  haskell.yml
benchmark/: Bench.hs  NQueens.hs  NonDet.hs
benchmark/Bench/: Error.hs  Interpret.hs  NonDet.hs  Reader.hs  State.hs  Writer.hs
benchmark/Bench/NonDet/: NQueens.hs
benchmark/NonDet/: NQueens.hs
docs/: SUMMARY.md  common_errors.md  defining_effects.md  faqs.md  migrating.md  overview.md  reinterpreting_effects.md  related.md  releasing.md  usage.md
docs/examples/: ReinterpretLog.md  ReinterpretingEffects.md
examples/: Inference.hs  Labelled.hs  Main.hs  Parser.hs  ReinterpretLog.hs  ReinterpretingEffects.hs  Teletype.hs  Utils.hs
script/: ghci-flags  ghci-flags-dependencies  release.hs  repl
src/Control/: Algebra.hs  Carrier.hs  Carrier.hs-boot  Effect.hs
src/Control/Algebra/: Dependent.hs  Handler.hs  Internal.hs
src/Control/Carrier/: Class.hs  Class.hs-boot  Cull.hs  Either.hs  Error.hs  Fail.hs  Identity.hs  Interpose.hs  Interpret.hs  Lift.hs  List.hs  Maybe.hs  Pure.hs  Pure.hs-boot  Reader.hs  Resource.hs  Simple.hs  Split.hs  State.hs  Suspend.hs  Unlift.hs  Writer.hs
src/Control/Carrier/Accum/: Church.hs  IORef.hs  Strict.hs
src/Control/Carrier/Accum/IORef/: Atomic.hs
src/Control/Carrier/Choose/: Church.hs
src/Control/Carrier/Cull/: Church.hs
src/Control/Carrier/Cut/: Church.hs
src/Control/Carrier/Empty/: Church.hs  Direct.hs  Maybe.hs
src/Control/Carrier/Error/: CPS.hs  Church.hs  Cont.hs  Either.hs
src/Control/Carrier/Fail/: Either.hs
src/Control/Carrier/Fresh/: Church.hs  Strict.hs
src/Control/Carrier/NonDet/: Church.hs  Maybe.hs
src/Control/Carrier/Reader/: Function.hs
src/Control/Carrier/Resumable/: Abort.hs  Either.hs  Resume.hs
src/Control/Carrier/State/: Church.hs  IORef.hs  Lazy.hs  Strict.hs
src/Control/Carrier/State/IORef/: Atomic.hs
src/Control/Carrier/Throw/: Either.hs  Error.hs
src/Control/Carrier/Trace/: Ignoring.hs  Printing.hs  Returning.hs
src/Control/Carrier/Writer/: Church.hs  Strict.hs
src/Control/Effect/: Abort.hs  Accum.hs  Alternative.hs  Async.hs  Carrier.hs  Catch.hs  Catch.hs-boot  Choose.hs  Choose.hs-boot  Class.hs  Close.hs  Cull.hs  Cut.hs  Eavesdrop.hs  Empty.hs  Empty.hs-boot  Error.hs  Error.hs-boot  Exception.hs  Fail.hs  Fresh.hs  Handler.hs  IO.hs  Intercept.hs  Internal.hs  Interpose.hs  Interpret.hs  Labelled.hs  Lift.hs  Lift.hs-boot  NonDet.hs  NonDet.hs-boot  Once.hs  Pure.hs  Rand.hs  Random.hs  Reader.hs  Reader.hs-boot  Resource.hs  Resumable.hs  (+12 more)
src/Control/Effect/Accum/: Internal.hs
src/Control/Effect/Catch/: Internal.hs
src/Control/Effect/Choose/: Internal.hs
src/Control/Effect/Empty/: Internal.hs
src/Control/Effect/Error/: CPS.hs  Church.hs  Internal.hs
src/Control/Effect/Fail/: Internal.hs
src/Control/Effect/Lift/: Internal.hs
src/Control/Effect/NonDet/: Internal.hs  NonEmpty.hs
src/Control/Effect/Rand/: Internal.hs
src/Control/Effect/Random/: Internal.hs
src/Control/Effect/Reader/: Internal.hs  Labelled.hs
src/Control/Effect/State/: Internal.hs  Labelled.hs  Lazy.hs  Strict.hs
src/Control/Effect/Sum/: Internal.hs
src/Control/Effect/Throw/: Internal.hs
src/Control/Effect/Unlift/: Internal.hs
src/Control/Effect/Void/: Internal.hs
src/Control/Effect/Writer/: Internal.hs
src/Control/Monad/: Codensity.hs
src/Data/: BinaryTree.hs
src/Data/BinaryTree/: NonEmpty.hs
test/: Accum.hs  Catch.hs  Choose.hs  Cull.hs  Cut.hs  Docs.hs  Doctest.hs  Effect.hs  Empty.hs  Error.hs  Fail.hs  Fresh.hs  Fusion.hs  Gen.hs  Lift.hs  Monad.hs  MonadFix.hs  NonDet.hs  Pure.hs  Reader.hs  Spec.hs  State.hs  Test.hs  Throw.hs  Writer.hs
test/Control/Effect/: LiftIO.hs  Spec.hs
test/Control/Effect/IO/: Spec.hs
test/Control/Effect/NonDet/: Spec.hs
test/Control/Effect/Reader/: Spec.hs
test/Cut/: Church.hs
test/Empty/: Base.hs  Maybe.hs  MaybeT.hs
test/Error/: Base.hs  Either.hs  ExceptT.hs
test/NonDet/: Church.hs
test/Reader/: Base.hs  Function.hs  ReaderT.hs  Trans.hs
test/State/: Gen.hs  Lazy.hs  Strict.hs
test/State/StateT/: Lazy.hs  Strict.hs
test/Writer/: Gen.hs  Strict.hs
test/Writer/WriterT/: Lazy.hs  Strict.hs
