cabal-version:       2.2

name:                fused-effects
version:             0.5.0.1
synopsis:            A fast, flexible, fused effect system.
description:         A fast, flexible, fused effect system, à la Effect Handlers in Scope, Monad Transformers and Modular Algebraic Effects: What Binds Them Together, and Fusion for Free—Efficient Algebraic Effect Handlers.
homepage:            https://github.com/fused-effects/fused-effects
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nicolas Wu, Tom Schrijvers, Rob Rix, Patrick Thomson
maintainer:          robrix@github.com
copyright:           2018-2019 Nicolas Wu, Tom Schrijvers, Rob Rix, Patrick Thomson
category:            Control
build-type:          Simple
extra-source-files:
  README.md
  ChangeLog.md

tested-with:
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.1

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:         common
  hs-source-dirs: src
  exposed-modules:
    -- Carriers
    Control.Carrier
    Control.Carrier.Choose.Church
    Control.Carrier.Class
    Control.Carrier.Cull.Church
    Control.Carrier.Cut.Church
    Control.Carrier.Empty.Maybe
    Control.Carrier.Error.Either
    Control.Carrier.Fail.Either
    Control.Carrier.Fresh.Strict
    Control.Carrier.Interpret
    Control.Carrier.Lift
    Control.Carrier.NonDet.Church
    Control.Carrier.Pure
    Control.Carrier.Reader
    Control.Carrier.Resumable.Either
    Control.Carrier.Resumable.Resume
    Control.Carrier.State.Lazy
    Control.Carrier.State.Strict
    Control.Carrier.Throw.Either
    Control.Carrier.Trace.Ignoring
    Control.Carrier.Trace.Printing
    Control.Carrier.Trace.Returning
    Control.Carrier.Writer.Strict
    -- Effects
    Control.Effect.Catch
    Control.Effect.Choose
    Control.Effect.Class
    Control.Effect.Cull
    Control.Effect.Cut
    Control.Effect.Empty
    Control.Effect.Error
    Control.Effect.Fail
    Control.Effect.Fresh
    Control.Effect.Lift
    Control.Effect.NonDet
    Control.Effect.Pure
    Control.Effect.Reader
    Control.Effect.Resumable
    Control.Effect.State
    Control.Effect.Sum
    Control.Effect.Throw
    Control.Effect.Trace
    Control.Effect.Writer
  build-depends:
      base           >= 4.9 && < 4.14
    , deepseq       ^>= 1.4.3
    , unliftio-core ^>= 0.1.2
    , transformers   >= 0.4 && < 0.6


test-suite examples
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: examples
  main-is:        Main.hs
  other-modules:
    Inference
    Parser
    ReinterpretLog
    Teletype
  build-depends:
      base
    , fused-effects
    , tasty              ^>= 1.2
    , tasty-hunit        ^>= 0.10
    , tasty-quickcheck   ^>= 0.10
    , transformers

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  other-modules:
    Catch
    Choose
    Cull
    Cut
    Empty
    Error
    Fresh
    Fusion
    Gen
    NonDet
    NonDet.Church
    Reader
    State
    Throw
    Writer
  build-depends:
      base
    , fused-effects
    , hedgehog           ^>= 1
    , hedgehog-fn        ^>= 1
    , inspection-testing ^>= 0.4
    , tasty              ^>= 1.2
    , tasty-hedgehog     ^>= 1
    , tasty-hunit        ^>= 0.10
    , transformers


benchmark benchmark
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Bench.hs
  other-modules:
    NonDet
    NonDet.NQueens
  build-depends:
      base
    , fused-effects
    , gauge
  ghc-options:
    -threaded
    -rtsopts "-with-rtsopts=-N -A4m -n2m"


source-repository head
  type:     git
  location: https://github.com/fused-effects/fused-effects
