name:                higher-order-effects
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Effect
                     , Control.Effect.Error
                     , Control.Effect.Fail
                     , Control.Effect.Fail.Internal
                     , Control.Effect.Internal
                     , Control.Effect.Lift
                     , Control.Effect.Lift.Internal
                     , Control.Effect.NonDet
                     , Control.Effect.NonDet.Internal
                     , Control.Effect.Reader
                     , Control.Effect.State
                     , Control.Effect.Void
                     , Control.Effect.Void.Internal
                     , Control.Effect.Writer
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010
