name:                higher-order-effects
version:             0.1.0.0
synopsis:            Higher-order algebraic effects, à la Effect Handlers in Scope, Monad Transformers and Modular Algebraic Effects: What Binds Them Together, and Fusion for Free—Efficient Algebraic Effect Handlers.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag build-examples
  description: Build with optimizations on (for CI or deployment builds)
  default:     False

library
  exposed-modules:     Control.Effect
                     , Control.Effect.Error
                     , Control.Effect.Fail
                     , Control.Effect.Fail.Internal
                     , Control.Effect.Fresh
                     , Control.Effect.Handler
                     , Control.Effect.Internal
                     , Control.Effect.Lift
                     , Control.Effect.Lift.Internal
                     , Control.Effect.NonDet
                     , Control.Effect.NonDet.Internal
                     , Control.Effect.Reader
                     , Control.Effect.Resumable
                     , Control.Effect.State
                     , Control.Effect.Sum
                     , Control.Effect.Trace
                     , Control.Effect.Void
                     , Control.Effect.Writer
  build-depends:       base >=4.11 && <4.12
                     , deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010


executable examples
  main-is:          Main.hs
  other-modules:    Teletype
  hs-source-dirs:   examples
  build-depends:    base >= 4.11 && <4.12
                  , higher-order-effects
                  , hspec >= 2.4.1

  if flag(build-examples)
    buildable: True
  else
    buildable: False

  default-language: Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Control.Effect.Spec
                     , Control.Effect.NonDet.Spec
  build-depends:       base >=4.11 && <4.12
                     , higher-order-effects
                     , hspec >= 2.4.1
  hs-source-dirs:      test
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Doctest.hs
  build-depends:       base
                     , doctest
  hs-source-dirs:      test
  default-language:    Haskell2010
