name:                higher-order-effects
version:             0.1.0.0
synopsis:            A fused higher-order algebraic effect system.
description:         A fused higher-order algebraic effect system, à la Effect Handlers in Scope, Monad Transformers and Modular Algebraic Effects: What Binds Them Together, and Fusion for Free—Efficient Algebraic Effect Handlers.
homepage:            https://github.com/robrix/higher-order-effects
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag build-examples
  description: Build the examples
  default:     False

library
  exposed-modules:     Control.Effect
                     , Control.Effect.Carrier
                     , Control.Effect.Error
                     , Control.Effect.Fail
                     , Control.Effect.Fail.Internal
                     , Control.Effect.Fresh
                     , Control.Effect.Internal
                     , Control.Effect.Lift
                     , Control.Effect.Lift.Internal
                     , Control.Effect.NonDet
                     , Control.Effect.NonDet.Internal
                     , Control.Effect.Rand
                     , Control.Effect.Reader
                     , Control.Effect.Resource
                     , Control.Effect.Resumable
                     , Control.Effect.State
                     , Control.Effect.Sum
                     , Control.Effect.Trace
                     , Control.Effect.Void
                     , Control.Effect.Writer
  build-depends:       base >=4.11 && <4.12
                     , deepseq
  hs-source-dirs:      src
  default-language:    Haskell2010


executable examples
  main-is:          Main.hs
  other-modules:    Teletype
  hs-source-dirs:   examples
  build-depends:    base >= 4.11 && <4.12
                  , higher-order-effects
                  , hspec >= 2.4.1

  if flag(build-examples)
    buildable: True
  else
    buildable: False

  default-language: Haskell2010


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Control.Effect.Spec
                     , Control.Effect.NonDet.Spec
  build-depends:       base >=4.11 && <4.12
                     , higher-order-effects
                     , hspec >= 2.4.1
  hs-source-dirs:      test
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Doctest.hs
  build-depends:       base
                     , doctest >= 0.7 && < 1.0
  hs-source-dirs:      test
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/higher-order-effects
